# codetiming

./: .bumpversion.cfg  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.circleci/: config.yml
.github/workflows/: unit_tests.yml
codetiming/: __init__.py  __main__.py  _timer.py  _timers.py
tests/: test_cli.py  test_codetiming.py
