[build-system]
requires      = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "codetiming"
authors = [
    { name = "Geir Arne Hjelle", email = "geirarne@gmail.com" },
    { name = "Real Python", email = "info@realpython.com" },
]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
keywords = ["timer", "class", "contextmanager", "decorator"]
requires-python = ">=3.6"
dependencies = ["dataclasses; python_version < '3.7'"]

[project.urls]
Homepage      = "https://realpython.com/python-timer"
"Source Code" = "https://github.com/realpython/codetiming"
Tutorial      = "https://realpython.com/python-timer"

[project.optional-dependencies]
cli  = ["platformdirs", "plotille", "rich"]
dev  = ["black", "bump2version", "flake8", "flit", "interrogate", "isort", "mypy"]
test = ["black", "interrogate", "pytest", "pytest-cov", "tox"]

[project.scripts]
codetiming = "codetiming.__main__:main"

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic       = false
ignore-semiprivate = false
ignore-private     = false
ignore-module      = false
fail-under         = 100
verbose            = 0


[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Codetiming imports"
